--- a/ManishKarki/Manish Karki/services.html
+++ b/ManishKarki/Manish Karki/services.html
@@ -128,7 +128,7 @@
                 </svg>
                 <i class="bx bx-layer"></i>
               </div>
-              <h4><a href="">Social Media Maarketing</a></h4>
+              <h4><a href="">Social Media Marketing</a></h4>
               <p>Remember me for boosting your posts or create optimized contents for social medias.</p>
             </div>
           </div>
